<resources>
    <string name="app_name">RickMortyTestApp</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="locations">Locations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet">No internet connection</string>
    <string name="search_by_name">Search by name</string>
    <string name="search">Search</string>
    <string name="status">Status</string>
    <string name="unknown">Unknown</string>
    <string name="dead">Dead</string>
    <string name="gender">Gender</string>
    <string name="alive">Alive</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="species">Species</string>
    <string name="human">Human</string>
    <string name="humanoid">Humanoid</string>
    <string name="alien">Alien</string>
    <string name="set_filter">Set filter</string>
    <string name="filters_applied">Filters applied:</string>
    <string name="clear">Clear</string>
    <string name="retry">Retry</string>
    <string name="apply">apply</string>
</resources>